Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: flask
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      name: flask-app
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-container
          image: ghcr.io/fy2sysnotify/flask-app:master-066d597f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
